small changes to examples

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <li>
             <article class="contact">
                 <h1>Roberts, Brad L (Brad)</h1>
-                <div>7221 south 95th street</div>
+                <div>9856 X street</div>
                 <div>Lincoln, NE 68526</div>
-                <div>broberts@neb.rr.com</div>
-                <div>4024230717</div>
+                <div>email@neb.rr.com</div>
+                <div>402999999</div>
             </article>
         </li>
     </ul>
