--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 <article class="contact">
     <h1>{{lastName}}, {{firstName}} {{initials}} ({{nickname}})</h1>
-    <div>{{addressLine1}}</div>
-    <div>{{addressLine2}}</div>
-    <div>{{city}}, {{state}} {{zipCode}}</div>
+    <div>{{address.addressLine1}}</div>
+    <div>{{address.addressLine2}}</div>
+    <div>{{address.city}}, {{address.state}} {{address.zipCode}}</div>
     <div>{{email}}</div>
     <div>{{phoneNumber}}</div>
 </article>
