--- a/index.html
+++ b/index.html
@@ -1,23 +1,15 @@
 <!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <title>Contact List</title>
-</head>
-
-<body>
-    <ul>
-        <li>
-            <article class="contact">
-                <h1>Roberts, Brad L (Brad)</h1>
-                <div>9856 X street</div>
-                <div>Lincoln, NE 68526</div>
-                <div>email@neb.rr.com</div>
-                <div>402999999</div>
-            </article>
-        </li>
-    </ul>
-</body>
-
+<html>
+    <head>
+        <title>contact list</title>
+    </head>
+    <body>
+        <ul class="contact-template">
+        </ul>
+        <script id="util" src="Scripts/util.js"></script>
+        <script id="handlebars" src="Scripts/vendor/handlebars.runtime.js" > </script>
+        <script id="template-file" src="Scripts/templates.js"></script>
+        <script id="app" src="Scripts/app.js" > </script>
+        <script id="ex" src="Data/exampleData.js"></script>
+    </body>
 </html>
